@@ -1,0 +1,9 @@
+<header>Default TTL for DNS records</header>
+
+This field allows you to set the time-to-live for DNS records created by
+Virtualmin, which is the time that they are cached by other DNS clients and
+servers on the Internet. You may want to adjust this if Webmin's default
+setting of 86400 seconds (1 day) is too long, perhaps because you expect
+DNS records to change often.<p>
+
+<footer>
