@@ -2417,6 +2417,11 @@ tmpl_logrotate=Logrotate directives for new servers
 tmpl_logrotatenone=Automatic
 tmpl_dns=BIND DNS records for new domains
 tmpl_dnsns=Additional manually configured nameservers
+tmpl_dnsttl=Default TTL for DNS records
+tmpl_dnsttl0=Use BIND module setting
+tmpl_dnsttl1=None
+tmpl_dnsttl2=Custom TTL
+tmpl_ednsttl=Missing or invalid default TTL - must be like 3600 or 1h
 tmpl_dnsbelow=Records below ..
 tmpl_replace=Record mode
 tmpl_replace0=Add above to automatically generated records
