@@ -6538,6 +6538,7 @@ push(@rv, { 'id' => 0,
 	    'dns_sub' => $config{'bind_sub'} || "none",
 	    'dns_master' => $config{'bind_master'} || "none",
 	    'dns_ns' => $config{'dns_ns'},
+	    'dns_ttl' => $config{'dns_ttl'},
 	    'dnssec' => $config{'dnssec'} || "none",
 	    'dnssec_alg' => $config{'dnssec_alg'},
 	    'namedconf' => $config{'namedconf'} || "none",
@@ -6777,6 +6778,7 @@ if ($tmpl->{'id'} == 0) {
 						   : $tmpl->{'dns_master'};
 	$config{'dns_view'} = $tmpl->{'dns_view'};
 	$config{'dns_ns'} = $tmpl->{'dns_ns'};
+	$config{'dns_ttl'} = $tmpl->{'dns_ttl'};
 	$config{'namedconf'} = $tmpl->{'namedconf'} eq 'none' ? undef :
 							$tmpl->{'namedconf'};
 	$config{'dnssec'} = $tmpl->{'dnssec'} eq 'none' ? undef
